# trolley

./: Cargo.toml  Justfile  LICENSE  README.md  docker-compose.yml  flake.nix
crates/trolley_core/: Cargo.toml
crates/trolley_core/src/: codec.rs  lib.rs  service.rs  transport.rs
crates/trolley_rabbitmq/: Cargo.toml
crates/trolley_rabbitmq/src/: lib.rs
examples/: rabbitmq.rs
src/: lib.rs
tests/: in_memory.rs
