[package]
name = "trolley_core"
version.workspace = true
edition.workspace = true

[dependencies]
futures.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
tokio-stream = { workspace = true, features = ["sync"] }
serde.workspace = true
serde_json = { workspace = true }